syntax = "proto3";
package resources;
option go_package = ".;resources";

message DepositRequest {
    float amount = 1;
}

message DepositResponse{
    bool ok = 1;
}

message GetDepositRequest{

}

message GetDepositResponse{
    float totalAmount = 1;
}

service DepositService{
    rpc Deposit(DepositRequest) returns (DepositResponse){}
    rpc GetDeposit(GetDepositRequest) returns (GetDepositResponse) {}
}